bk_ida/gccida/c0/asprintf
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/asprintf/src/asprintf.c:519:8: error: use of undeclared identifier 'QGenericArgument'
return QGenericArgument::QGenericArgument( buf, fmt, ap); 
       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/asprintf/src/asprintf.c:519:24: error: expected expression
return QGenericArgument::QGenericArgument( buf, fmt, ap); 
                       ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/asprintf/src/obj/asprintf.o] Error 1
